<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#0A2B42">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="223dp"
        android:layout_height="155dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:backgroundTint="@color/text"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"
        android:backgroundTint="@color/text"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/register_checker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:text="Email already registered!"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="24dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextCoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:backgroundTint="@color/text"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/No_match_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="0dp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:text="@string/password_does_not_match"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/teal_200"
        android:textColor="#0A2B42"
        android:textSize="18dp"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="@color/text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewRLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="1dp"
            android:text="@string/register_login"
            android:textColor="@color/text"
            android:textStyle="italic" />
    </LinearLayout>


</LinearLayout>






