<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A2B42"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".loginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="232dp"
        android:layout_height="144dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/login_matcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:text="Email or Password does not match "
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:backgroundTint="@color/text"
        android:inputType="textEmailAddress"
        android:textColor="@color/text"
        android:textColorHint="@color/text" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/text"
        android:textColor="@color/text"
        android:textColorHint="@color/text" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/gradient1"
        android:text="@string/login"
        android:textColor="#0A2B42"
        android:textSize="18dp"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textColor="@color/text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:text="@string/signup"
            android:textColor="@color/text"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>



